--- a/pg/index.html
+++ b/pg/index.html
@@ -1,4 +1,4 @@
-<script type="module">import * as pg from './__target__/js'; window.pg = pg;</script>
+<script type="module">import * as pg from './__target__/pg.js'; window.pg = pg;</script>
 <h2>PG demo</h2>
 
 <p>
