--- a/pg/index.html
+++ b/pg/index.html
@@ -2,5 +2,5 @@
 <h2>PG demo</h2>
 
 <p>
-<button onclick="console.log(window.pg.pygen.generate());">Click me repeatedly!</button>
+<button onclick="console.log(window.pg.pygen.generate({'real_world': true}));">Click me repeatedly!</button>
 <div id = "test"></div>
